# warpt

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_QUALITY_SETUP.md  CONTRIBUTING.md  LICENSE  Makefile  PRECOMMIT_SETUP.md  README.md  RUFF_SETUP_SUMMARY.md  TENSTORRENT_INTEGRATION.md  lint.sh  parallel-stress-decisions.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docker/: Makefile
docker/benchmarks/hpl/: Dockerfile.arm64  Make.arm64_linux
docker/examples/: hpl_config.yaml
docs/: ARCHITECTURE.md  CLI-Design.md  FRAMEWORK_DETECTION.md  HARDWARE_ABSTRACTION.md  HPL-SETUP.md  HPL-TUNING.md  LINTING.md  OVERVIEW.md  VERSION.md  WRITING_TESTS.md  WRITING_TESTS.md.backup  benchmark_design.md  energyframe_cli_design.md
examples/: README.md  framework_detection_demo.py  framework_serialization_demo.py  hpl_5s.yaml  hpl_config.yaml  power_monitoring_demo.py  quantum.py
lambda/: .gitignore  CLAUDE.md  multigpu.yaml  run.sh  setup.sh
lambda/results/: ISSUES.md
lambda/results/20260410_213120/: gpu_details.csv  nvidia_smi.txt  nvidia_smi_full_query.txt  system_info.txt  topology.txt  warpt_list.txt
lambda/results/20260410_213120/smi_logs/: dmon.csv
lambda/results/20260410_231318/: daemon_workload_results.json  nvidia_smi.txt  nvidia_smi_final.txt  nvidia_smi_full_query.txt  per_gpu_cfd.json  per_gpu_tests.json  per_gpu_tests.yaml  system_info.txt  warpt_list.txt
lambda/results/20260410_231318/db_dumps/: cases.csv  cases.json  db_summary.json  events.csv  events.json  gpu_profiles.csv  gpu_profiles.json  vitals.csv  vitals.json
lambda/results/20260410_234303/: environment.json  gpu_details.csv  manifest.json  nccl_env.txt  nvidia_smi.txt  nvidia_smi_final.txt  nvidia_smi_full_query.txt  system_info.txt  warpt.db  warpt_list.txt
lambda/results/20260410_234303/db_dumps/: db_summary.json  gpu_profiles.csv  gpu_profiles.json  schema_migrations.csv  schema_migrations.json  vitals.csv  vitals.json
lambda/results/20260410_234303/smi_logs/: dmon.csv
lambda/results/20260410_234416/: gpu_details.csv  manifest.json  nvidia_smi.txt  nvidia_smi_final.txt  nvidia_smi_full_query.txt  nvlink.txt  system_info.txt  warpt.db  warpt_list.txt
lambda/results/20260410_234416/db_dumps/: cases.csv  cases.json  db_summary.json  events.csv  events.json  events_detail.json  gpu_profiles.csv  gpu_profiles.json  schema_migrations.csv  schema_migrations.json  vitals.csv  vitals.json
lambda/results/20260410_234416/smi_logs/: dmon.csv
tests/: README.md  conftest.py  test_amd_backend.py  test_attending.py  test_backends_factory.py  test_carbon_calculator.py  test_carbon_config.py  test_carbon_store.py  test_carbon_tracker.py  test_casefile.py  test_charge_nurse.py  test_chart_nurse.py  test_config.py  test_daemon_power_backend.py  test_daemon_process.py  test_docker_detection.py  test_framework_detection.py  test_gpu_fields.py  test_gpu_warning.py  test_inspect_cmd.py  test_list_parser.py  test_models_power.py  test_models_stress.py  test_monitor_json.py  test_monitoring.py  test_nvidia_toolkit_detection.py  test_ollama_client.py  test_pci_backend.py  test_pipeline.py  test_power_factory_daemon.py  test_ram_latency.py  test_scribe.py  test_serialization.py  test_stress_registry.py  test_stress_results.py  test_tenstorrent_backend.py  test_utils_env.py  test_utils_logger.py  test_version.py  test_vitals_nurse.py
warpt/: __init__.py  cli.py  monitoring.py  server.py
warpt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
warpt/backends/: __init__.py  amd.py  base.py  factory.py  intel.py  network.py  nvidia.py  pci.py  quantum.py  ram.py  storage.py  system.py  tenstorrent.py
warpt/backends/hardware/: __init__.py
warpt/backends/hardware/storage/: __init__.py  base.py  factory.py  local.py
warpt/backends/power/: __init__.py  amd_power.py  base.py  daemon.py  daemon_client.py  daemon_source.py  factory.py  linux_rapl.py  macos_power.py  nvidia_power.py  sources.py  tenstorrent_power.py
warpt/backends/software/: __init__.py  base.py  docker.py  libraries.py  nvidia_toolkit.py
warpt/backends/software/frameworks/: __init__.py  base.py  (+23 more)
warpt/benchmarks/: __init__.py  base.py  hpl.py  registry.py
warpt/carbon/: __init__.py  calculator.py  config.py  daemon.py  grid_intensity.py  session.py  store.py  tracker.py
warpt/commands/: __init__.py  benchmark_cmd.py  carbon_cmd.py  daemon_cmd.py  er_cmd.py  inspect_cmd.py  list_cmd.py  monitor_cmd.py  monitor_tui.py  power_cmd.py  recommend_cmd.py  stress_cmd.py  version_cmd.py
warpt/daemon/: __init__.py  casefile.py  charge_nurse.py  config.py  daemon_process.py  gpu_fields.py  vitals_nurse.py
warpt/daemon/agents/: __init__.py  attending.py  chart_nurse.py  ollama_client.py  pipeline.py  prompts.py  scribe.py
warpt/integrate/: __init__.py  agent.py  cli.py  models.py  session.py  system_prompt.py
warpt/integrate/loaders/: __init__.py  base.py  directory.py  git.py  pdf.py  web.py
warpt/integrate/prompts/: coding_standards.md  integration_guide.md
warpt/models/: __init__.py  benchmark_models.py  carbon_models.py  constants.py  list_models.py  network_models.py  power_models.py  profile_models.py  stress_models.py
warpt/profiles/: __init__.py  fingerprint.py  store.py
warpt/stress/: __init__.py  _pointer_chase.py  _pointer_chase_ext.cpp  _wip_gpu_multi_scaling.py  base.py  cpu_compression.py  cpu_compute.py  cpu_hashing.py  gpu_cfd_simulation.py  gpu_compute.py  gpu_fp32_compute.py  gpu_fp64_compute.py  gpu_memory.py  gpu_multi_scaling.py  gpu_precision.py  network_bidirectional.py  network_loopback.py  network_point_to_point.py  ram_base.py  ram_latency.py  ram_memory.py  ram_swap.py  ram_workload.py  registry.py  results.py  runner.py  storage_mixed.py  storage_random_read.py  storage_random_write.py  storage_sequential_read.py  storage_sequential_write.py  utils.py
warpt/stress/monitoring/: __init__.py  base.py  darwin.py  factory.py  linux.py
warpt/utils/: __init__.py  env.py  list_parser.py  logger.py
warpt/version/: __init__.py  warpt_version.py
