[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warpt"
version = "0.1.0"
description = "Performance monitoring and system utilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click==8.3.0",
    "psutil==7.1.2",
    "pydantic==2.12.3",
    "nvidia-ml-py>=12.0.0",
    "backports.strenum>=1.3.1; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
    "types-psutil>=5.9.0",
]

[project.scripts]
warpt = "warpt.cli:warpt"

[tool.setuptools]
packages = ["warpt", "warpt.backends", "warpt.commands", "warpt.models", "warpt.utils", "warpt.version"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort - import sorting
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ARG",    # flake8-unused-arguments
    "RUF",    # ruff-specific rules
    "D",      # pydocstyle - docstring conventions
]
ignore = [
    "D100",   # Missing module docstring (sometimes not needed)
    "D104",   # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Use Google-style docstrings

[tool.ruff.lint.isort]
known-first-party = ["warpt"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
